2003-03-31  Darin Adler  <darin@apple.com>

        Reviewed by Chris.

	- fixed 3213093 -- REGRESSION: crash accessing menu items right after launch with about:blank as homepage

        * khtml/khtmlview.cpp: (KHTMLView::viewportMouseMoveEvent):
        Another place needed a check for null.

2003-03-31  David Hyatt  <hyatt@apple.com>

	Fix for 3211849.  I accidentally removed a BORDER_COLOR case
	from the switch when I removed the transparency check for
	the shorthand.  The case originally fell through to the case
	below it, so a straight removal was wrong.  I needed to add
	it to the following set of case labels.
	
        Reviewed by darin

        * khtml/css/cssstyleselector.cpp:

2003-03-31  David Hyatt  <hyatt@apple.com>

	First-letter can be floated.  Make sure we mutate the display
	to BLOCK so that we don't make an inline when we're floating.
	Fixes bug 3186004.
	
        Reviewed by darin

        * khtml/rendering/render_block.cpp:

2003-03-31  Darin Adler  <darin@apple.com>

        Reviewed by John.

	- fixed 3213093 -- accessing menu items immediately after launch causes crash when about:blank is homepage

        * khtml/khtmlview.cpp: (isSubmitImage): Add check for node of 0.
        
        - fixed 3211461 -- crash in KWQListIteratorImpl tabbing through w3c test page

        * kwq/KWQKHTMLPart.h: Added childFrameForPart function, better than KHTMLPart::frame because it works
        for HTML frames inside objects as well as plain old HTML frames.
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::childFrameForPart): Like KHTMLPart::frame, but looks through m_objects too.
        (KWQKHTMLPart::nextKeyViewInFrameHierarchy): Use childFrameForPart instead of frame function.

2003-03-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	- fixed 3206524 - incyte.com "load properties" function does not work
	
        * khtml/html/html_documentimpl.cpp: